@startuml
'https://plantuml.com/class-diagram

class NameSorter{
    - a: int "amount"
}

class checkAlpha{
    +strAlpha(size, arr)
}

class readFile{
    -inputFile
    +amount()
    +copyInput(size, arr)
}

class outputFile{
    +outFile(size, arr)
}

NameSorter-->readFile
readFile-->checkAlpha
checkAlpha-->outputFile

@enduml